--- a/src/app/src/main/res/layout/layout_tab2.xml
+++ b/src/app/src/main/res/layout/layout_tab2.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="1000dp"
     android:orientation="vertical">
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="791dp"
+        android:layout_height="match_parent"
         android:paddingBottom="100dp">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:layout_height="1000dp"
+            android:orientation="vertical"
+            android:padding="16dp">
 
             <!-- Row for Date -->
             <TableRow
