--- a/src/app/src/main/res/layout/activity_forgot_password.xml
+++ b/src/app/src/main/res/layout/activity_forgot_password.xml
@@ -35,7 +35,7 @@
 
     <Button
         android:id="@+id/btn_layma"
-        android:layout_width="wrap_content"
+        android:layout_width="180dp"
         android:layout_height="45dp"
         android:layout_marginTop="20dp"
         android:layout_weight="1"
