--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -90,7 +90,7 @@
                     android:fontFamily="sans-serif"
                     android:scaleX="0.8"
                     android:scaleY="0.8"
-                    android:text="Hiển thị Password"
+                    android:text="Hiện mật khẩu"
                     android:textColor="#3D88A0"
                     android:textSize="16sp" />
 
