--- a/src/app/src/main/res/layout/activity_signup.xml
+++ b/src/app/src/main/res/layout/activity_signup.xml
@@ -33,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
                 android:fontFamily="sans-serif"
-                android:text="Create Account"
+                android:text="Tạo tài khoản"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
                 android:textSize="48sp"
@@ -51,7 +51,7 @@
                 android:drawablePadding="16dp"
                 android:ems="10"
                 android:fontFamily="sans-serif"
-                android:hint="Name"
+                android:hint="Tên người dùng"
                 android:inputType="textPersonName"
                 android:padding="8dp"
                 android:textColorHint="#22C3E6"
@@ -87,7 +87,7 @@
                 android:drawablePadding="16dp"
                 android:ems="10"
                 android:fontFamily="sans-serif"
-                android:hint="Password"
+                android:hint="Mật khẩu"
                 android:inputType="textPersonName"
                 android:padding="8dp"
                 android:textColor="#22C3E6"
@@ -102,7 +102,7 @@
                 android:layout_marginTop="20dp"
                 android:background="@drawable/btn_login"
                 android:fontFamily="sans-serif"
-                android:text="Sign UP"
+                android:text="Đăng kí"
                 android:textAllCaps="true"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -114,7 +114,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:fontFamily="sans-serif"
-                android:text="Already have an account?"
+                android:text="Bạn đã có tài khoản?"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
                 android:textSize="20sp"
