--- a/src/app/src/main/res/layout/activity_group_detail.xml
+++ b/src/app/src/main/res/layout/activity_group_detail.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="16dp">
 
@@ -21,7 +22,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="Tên nhóm"
-                android:textColor="#045275"
+                android:textColor="#3D88A0"
                 android:textSize="25dp"
                 android:textStyle="bold" />
 
@@ -72,11 +73,12 @@
                 android:layout_width="140dp"
                 android:layout_height="50dp"
                 android:layout_gravity="center_horizontal"
-                android:background="@drawable/btn_login"
                 android:backgroundTint="@null"
                 android:text="Thêm"
                 android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="@drawable/btn_login"
+                app:backgroundTint="@null"/>
 
             <TextView
                 android:id="@+id/textView17"
