--- a/src/app/src/main/res/layout/activity_incomegroups.xml
+++ b/src/app/src/main/res/layout/activity_incomegroups.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="1000dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <ScrollView
@@ -23,6 +24,7 @@
                 android:layout_marginBottom="16dp"
                 android:gravity="center"
                 android:text="Group Income"
+                android:textColor="#3D88A0"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -86,13 +88,16 @@
 
             <Button
                 android:id="@+id/btn_tienthugroup"
-                android:layout_width="250dp"
-                android:layout_height="50dp"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="8dp"
                 android:layout_gravity="center"
+                android:background="@drawable/btn_login"
                 android:fontFamily="sans-serif"
                 android:text="Nạp quỹ"
                 android:textAllCaps="true"
-                android:textSize="18sp"
+                android:textSize="17sp"
+                app:backgroundTint="@null"
                 android:textStyle="bold" />
 
             <LinearLayout
@@ -105,6 +110,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="30dp"
                     android:layout_weight="1"
+                    android:layout_marginTop="8dp"
                     android:text="Tổng tiền"
                     android:textColor="#1181B3"
                     android:textSize="20sp"
