--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -110,12 +110,12 @@
                 android:layout_height="45dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="12dp"
-                android:background="@drawable/btn_login"
                 android:fontFamily="sans-serif"
                 android:text="Đăng nhập"
                 android:textAllCaps="true"
                 android:textSize="20sp"
                 android:textStyle="bold"
+                android:background="@drawable/btn_login"
                 app:backgroundTint="@null" />
 
             <TextView
@@ -124,11 +124,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="sans-serif"
-                android:text="Or"
+                android:text="Hoặc"
                 android:textAlignment="center"
                 android:textColor="#3D88A0"
-                android:textSize="20sp"
-                 />
+                android:textSize="20sp" />
 
             <LinearLayout
                 android:layout_width="match_parent"
