--- a/src/app/src/main/res/layout/activity_group_detail.xml
+++ b/src/app/src/main/res/layout/activity_group_detail.xml
@@ -27,11 +27,12 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:layout_marginTop="8dp"
                 android:id="@+id/tvt_Tentruongnhom"
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="TextView"
-                android:textColor="#0A99D9"
+                android:textColor="#3D88A0"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -40,7 +41,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:text="TextView"
-                android:textColor="#1A9FD9"
+                android:textColor="#3D88A0"
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
@@ -54,7 +55,7 @@
                     android:layout_height="40dp"
                     android:layout_weight="1"
                     android:text="ID thành viên :"
-                    android:textColor="#139AD5"
+                    android:textColor="#3D88A0"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
@@ -70,12 +71,13 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="140dp"
-                android:layout_height="50dp"
+                android:layout_width="150dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:backgroundTint="@null"
                 android:text="Thêm"
-                android:textSize="20dp"
+                android:layout_marginTop="8dp"
+                android:textSize="18dp"
                 android:textStyle="bold"
                 android:background="@drawable/btn_login"
                 app:backgroundTint="@null"/>
@@ -83,9 +85,10 @@
             <TextView
                 android:id="@+id/textView17"
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="45dp"
+                android:layout_marginTop="8dp"
                 android:text="Danh sách thành viên:"
-                android:textColor="#096E9B"
+                android:textColor="#3D88A0"
                 android:textSize="25sp"
                 android:textStyle="bold" />
         </LinearLayout>
@@ -94,7 +97,7 @@
     <ListView
         android:id="@+id/listViewMembers"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="348dp"
         android:layout_weight="1"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="1dp" />
@@ -109,23 +112,23 @@
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Đóng quỹ"
-            android:textColor="#1B99D1"
+            android:textColor="#3D88A0"
             android:textColorHighlight="#1698D1"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_viecchinhom"
             android:layout_width="wrap_content"
             android:layout_height="40dp"
             android:layout_weight="1"
+            android:gravity="center"
             android:text="Chi tiêu"
-            android:textColor="#179FDB"
+            android:textColor="#3D88A0"
             android:textSize="24sp"
-            android:textStyle="bold"
-            android:gravity="center"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
 </LinearLayout>
