chia lai package

--- a/src/app/src/main/res/layout/activity_group.xml
+++ b/src/app/src/main/res/layout/activity_group.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:fillViewport="true"
     android:background="@drawable/group"
-    tools:context=".group">
+    tools:context=".controller.activity.group">
 
     <LinearLayout
         android:id="@+id/inputLayout"
