--- a/src/app/src/main/res/layout/activity_login.xml
+++ b/src/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@color/white"
-    tools:context=".MainActivity">
+    tools:context=".controller.activity.MainActivity">
 
     <ScrollView
         android:layout_width="match_parent"
