--- a/src/app/src/main/res/layout/activity_personal.xml
+++ b/src/app/src/main/res/layout/activity_personal.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".personal">
+    tools:context=".controller.activity.personal">
 
     <LinearLayout
         android:layout_width="match_parent"
