--- a/src/app/src/main/res/layout/activity_setting.xml
+++ b/src/app/src/main/res/layout/activity_setting.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:background="#F8F4F4"
     android:orientation="vertical"
-    tools:context=".Setting" >
+    tools:context=".controller.activity.Setting" >
 
     <ImageView
         android:id="@+id/imageView3"
